--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "homepage": "https://nikaabashidze.github.io/skillwillHomeworks",
+  "homepage": "https://nikaabashidze.github.io/homework",
   "name": "nonstop",
   "version": "0.1.0",
   "private": true,
